# Marmoset

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
cmd/: CommandlineParser.cpp  CommandlineParser.h
core/: Archive.cpp  Archive.h  ByteStream.h  Decompressor.cpp
core/archive/: Archive.cpp  Archive.h
libraries/: CMakeLists.txt
libraries/marmosetCore/: CMakeLists.txt
libraries/marmosetCore/archive/: Archive.cpp
libraries/marmosetCore/bytestream/: ByteStream.cpp  ByteStream.h
libraries/marmosetCore/limpelziv/: Decompressor.cpp  Decompressor.h
